# embedded-vintage-fonts

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: debugger.rs
src/: lib.rs
tests/: common.rs  font_12x16.rs  font_24x32.rs  font_6x12.rs  font_6x6.rs  font_6x8.rs  font_8x16.rs
