[package]
name = "embedded-vintage-fonts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.7.0"

[dev-dependencies]
# Automatically depend on command line parser and desktop simulator for
# embedded graphics when building and running tests and examples.
clap = { version = "3.0.3", features = ["derive"] }
embedded-graphics-simulator = "0.3.0"
