[package]
name = "embedded-vintage-fonts"
description = "Vintage fonts from embedded-graphics 0.6 back release 0.7"
version = "0.1.0"
edition = "2021"
authors = ["Christian Meusel <christian.meusel@posteo.de>"]

license = "MIT OR Apache-2.0"

categories = ["rendering", "embedded", "no-std"]
keywords = ["bitmap", "monochrome", "font", "monospace"]

documentation = "https://docs.rs/embedded-vintage-fonts"
repository = "https://github.com/sirhcel/embedded-vintage-fonts"
readme = "README.md"

exclude = [
    "/.github/",
    ".gitignore",
]


[dependencies]
embedded-graphics = "0.7.0"

[dev-dependencies]
# Automatically depend on command line parser and desktop simulator for
# embedded graphics when building and running tests and examples.
clap = { version = "3.0.3", features = ["derive"] }
embedded-graphics-simulator = "0.3.0"
